--- a/css/dialogs.css
+++ b/css/dialogs.css
@@ -5,12 +5,16 @@
      height: 100%;
      position: fixed;
      background-color: rgba(0, 0, 0, 0.6);
+     display: none;
+     padding: 8px;
+ }
+
+ input[type="checkbox"].overlay-toggle:checked+.overlay {
      display: -webkit-box;
      display: -webkit-flex;
      display: -moz-box;
      display: -ms-flexbox;
      display: flex;
-     padding: 8px;
  }
 
  .dialog {
