--- a/css/grid.css
+++ b/css/grid.css
@@ -239,3 +239,11 @@
         width: 100%;
     }
 }
+
+.rest {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+       -moz-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+}
