textareas can be resized by users with js disabled

--- a/css/material-inputs.css
+++ b/css/material-inputs.css
@@ -21,11 +21,11 @@ textarea.material-input {
     resize: vertical;
 }
 
-textarea.is-upgraded {
+textarea.material-input.is-upgraded {
     resize: none;
 }
 
-textarea.material-input::-webkit-scrollbar {
+textarea.material-input.is-upgraded::-webkit-scrollbar {
     display: none;
 }
 
@@ -312,6 +312,10 @@ textarea.material-input::-webkit-scrollbar {
     border-radius: 50%;
     background: #2196F3;
     border: none;
+    -webkit-transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 0.18s cubic-bezier(0.4, 0, 0.2, 1), border 0.18s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.18s cubic-bezier(0.4, 0, 0.2, 1), background 0.28s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.18s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .material-range::-moz-range-thumb {
