--- a/css/accordions.css
+++ b/css/accordions.css
@@ -3,19 +3,24 @@
     display: block;
 }
 
-.accordion-content {
-    position: relative;
-    padding: 16px;
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
-    width: 100%;
-    display: none;
-}
-
 .accordion-toggle {
     display: none!important;
 }
 
-.accordion-toggle::checked+.accordion-content{
+.accordion-content {
+    position: relative;
     display: block;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    padding: 0 16px;
+    opacity: 0;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+
+.accordion-toggle:checked+.accordion-content{
+    padding: 16px;
+    opacity: 1;
+    height: auto;
 }
