--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,4 +1,5 @@
-.button {
+.button,
+.tab-item {
     background: transparent;
     border: none;
     border-radius: 2px;
@@ -32,19 +33,23 @@
     user-select: none
 }
 
-.button::-moz-focus-inner {
+.button::-moz-focus-inner,
+.tab-item::-moz-focus-inner {
     border: 0;
 }
 
-.button:hover {
+.button:hover,
+.tab-item:hover {
     background-color: rgba(158, 158, 158, 0.20);
 }
 
-.button:focus:not(:active) {
+.button:focus:not(:active),
+.tab-item:focus:not(:active) {
     background-color: rgba(0, 0, 0, 0.12);
 }
 
-.button:active {
+.button:active,
+.tab-item:active {
     background-color: rgba(158, 158, 158, 0.40);
 }
 
