--- a/css/base.css
+++ b/css/base.css
@@ -1,4 +1,4 @@
- .fluid {
+.fluid {
      width: 100%;
      height: auto;
  }
@@ -18,35 +18,12 @@
      margin: 0;
      padding: 0;
      -moz-box-sizing: border-box;
-          box-sizing: border-box;
+          -webkit-box-sizing: border-box;
+             box-sizing: border-box;
      -webkit-transition: all .3s ease, color 0s, visibility 0s;
+             -o-transition: all .3s ease, color 0s, visibility 0s;
              transition: all .3s ease, color 0s, visibility 0s;
-
-    /* Support for all WebKit browsers. */
-    -webkit-font-smoothing: antialiased;
-    /* Support for Safari and Chrome. */
-    text-rendering: optimizeLegibility;
-    
-    /* Support for Firefox. */
-    -moz-osx-font-smoothing: grayscale;
-
-    /* Support for IE. */
-    -webkit-font-feature-settings: 'liga';
-       -moz-font-feature-settings: 'liga';
-            font-feature-settings: 'liga';
  }
-
-@font-face {
-    font-family: 'Material Icons';
-    font-style: normal;
-    font-weight: 400;
-    src: url("../font/material-icons/MaterialIcons-Regular.eot"); /* For IE6-8 */
-    src: local('Material Icons'),
-        local('MaterialIcons-Regular'),
-        url("../font/material-icons/MaterialIcons-Regular.woff2") format('woff2'),
-        url("../font/material-icons/MaterialIcons-Regular.woff") format('woff'),
-        url("../font/material-icons/MaterialIcons-Regular.ttf") format('truetype');
-}
 
 ::-moz-selection {
     background: #b3d4fc;
@@ -61,12 +38,8 @@
      font-family: "Roboto", "Helvetica", "Arial", sans-serif;
  }
 
- .fa {
-     font-family: "Fonts/fontawesome-webfont.ttf?v=4.2.0";
- }
  /* Remove the unwanted box around FAB buttons */
  /* More info: http://goo.gl/IPwKi */
-
  a,
  .accordion,
  .button,
@@ -79,40 +52,40 @@
  .material-radio,
  .material-range,
  .material-switch,
- .tabs__tab {
+ .tab {
      -webkit-tap-highlight-color: transparent;
      -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
  }
+
  /*
  * Make html take up the entire screen
  * Then set touch-action to avoid touch delay on mobile IE
  */
-
  html {
      width: 100%;
      height: 100%;
      -ms-touch-action: manipulation;
      touch-action: manipulation;
  }
+    
  /*
 * Make body take up the entire screen
 * Remove body margin so layout containers don't cause extra overflow.
 */
-
  body {
      width: 100%;
      min-height: 100%;
  }
+    
  /*
  * Main display reset for IE support.
  * Source: http://weblog.west-wind.com/posts/2015/Jan/12/main-HTML5-Tag-not-working-in-Internet-Explorer-91011
  */
-
  main {
      display: block;
  }
- /* helps with border-radius */
-
+    
+ /* Helps with border-radius */
  .responsive {
      overflow-x: auto;
  }
@@ -147,33 +120,33 @@
 
  h1,
  .h1 {
-     font-size: 36px
+     font-size: 36px!important
  }
 
  h2,
  .h2 {
-     font-size: 30px
+     font-size: 30px!important
  }
 
  h3,
  .h3,
  .title {
-     font-size: 24px
+     font-size: 24px!important
  }
 
  h4,
  .h4 {
-     font-size: 20px
+     font-size: 20px!important
  }
 
  h5,
  .h5 {
-     font-size: 18px
+     font-size: 18px!important
  }
 
  h6,
  .h6 {
-     font-size: 16px
+     font-size: 16px!important
  }
 
  h1,
