* material textareas FINALLY resize properly
* robotto font apllied to every html element, including before and after elements

* removed the w3.css from the stylesheets since we have pretty much all the utilities we need

--- a/css/base.css
+++ b/css/base.css
@@ -15,13 +15,14 @@
  *,
  *::before,
  *::after {
+     font-family: "Roboto", "Helvetica", "Arial", sans-serif!important;
      margin: 0;
      padding: 0;
-     -moz-box-sizing: border-box;
-          -webkit-box-sizing: border-box;
+     -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
              box-sizing: border-box;
      -webkit-transition: all .3s ease, color 0s, visibility 0s;
-             -o-transition: all .3s ease, color 0s, visibility 0s;
+          -o-transition: all .3s ease, color 0s, visibility 0s;
              transition: all .3s ease, color 0s, visibility 0s;
  }
 
@@ -33,10 +34,6 @@
     background: #b3d4fc;
     text-shadow: none; 
 }
-
- body {
-     font-family: "Roboto", "Helvetica", "Arial", sans-serif;
- }
 
  /* Remove the unwanted box around FAB buttons */
  /* More info: http://goo.gl/IPwKi */
