--- a/css/buttons.css
+++ b/css/buttons.css
@@ -152,9 +152,9 @@ input.button[type="submit"] {
     position: absolute;
     top: 50%;
     left: 50%;
-    -webkit-transform: translate(-12px, -12px);
-    -ms-transform: translate(-12px, -12px);
-    transform: translate(-12px, -12px);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     line-height: 24px;
     width: 24px;
 }
