--- a/css/dialogs.css
+++ b/css/dialogs.css
@@ -41,7 +41,6 @@
 }
 
 .dialog .actions {
-     width: 100%;
      display: -webkit-box;
      display: -webkit-flex;
      display: -moz-box;
@@ -55,8 +54,9 @@
      -webkit-flex-wrap: wrap;
          -ms-flex-wrap: wrap;
              flex-wrap: wrap;
-     margin: auto;
-     margin-top: 16px;
+    width: 100%;
+    margin-top: 16px;
+    font-size: 16px;
 }
 
  @media screen and (min-width: 48em) {
