--- a/css/grid.css
+++ b/css/grid.css
@@ -7,71 +7,21 @@
     -ms-flex-wrap: wrap;
     -webkit-flex-wrap: wrap;
     flex-wrap: wrap;
+    padding: 8px;
 }
 
-.row .col,
-.row .col.sm-1,
-.row .col.sm-2,
-.row .col.sm-3,
-.row .col.sm-4,
-.row .col.sm-5,
-.row .col.sm-6,
-.row .col.sm-7,
-.row .col.sm-8,
-.row .col.sm-9,
-.row .col.sm-10,
-.row .col.sm-11,
-.row .col.sm-12,
-.row .col.md-1,
-.row .col.md-2,
-.row .col.md-3,
-.row .col.md-4,
-.row .col.md-5,
-.row .col.md-6,
-.row .col.md-7,
-.row .col.md-8,
-.row .col.md-9,
-.row .col.md-10,
-.row .col.md-11,
-.row .col.md-12,
-.row .col.lg-1,
-.row .col.lg-2,
-.row .col.lg-3,
-.row .col.lg-4,
-.row .col.lg-5,
-.row .col.lg-6,
-.row .col.lg-7,
-.row .col.lg-8,
-.row .col.lg-9,
-.row .col.lg-10,
-.row .col.lg-11,
-.row .col.lg-12,
-.row .col.xl-1,
-.row .col.xl-2,
-.row .col.xl-3,
-.row .col.xl-4,
-.row .col.xl-5,
-.row .col.xl-6,
-.row .col.xl-7,
-.row .col.xl-8,
-.row .col.xl-9,
-.row .col.xl-10,
-.row .col.xl-11,
-.row .col.xl-12,
-{
-    -webkit-box-flex: 1;
-    -ms-flex-positive: 1;
-    -webkit-flex-grow: 1;
-    -moz-box-flex: 1;
-    flex-grow: 1;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    display: inline-block;
-    zoom: 1;
-    letter-spacing: normal;
-    word-spacing: normal;
-    vertical-align: top;
-    text-rendering: auto;
+.row.no-space,
+.row.no-space .col {
+    padding: 0!important;
+}
+
+.row .col {
+    display: -webkit-inline-box;
+    display: -webkit-inline-flex;
+    display: -moz-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    padding: 8px;
 }
 
 .row .col.sm-1 {
