--- a/css/utilities.css
+++ b/css/utilities.css
@@ -1,25 +1,29 @@
-.border-0 {
-    border: 0!important
+.no-border {
+    border: 0!important;
 }
 
 .border {
-    border: 1px solid #ccc!important
+    border: 1px solid #ccc;
 }
 
 .border-top {
-    border-top: 1px solid #ccc!important
+    border-top: 1px solid #ccc;
 }
 
 .border-bottom {
-    border-bottom: 1px solid #ccc!important
+    border-bottom: 1px solid #ccc;
 }
 
 .border-left {
-    border-left: 1px solid #ccc!important
+    border-left: 1px solid #ccc;
 }
 
 .border-right {
-    border-right: 1px solid #ccc!important
+    border-right: 1px solid #ccc;
+}
+
+.round {
+    border-radius: 2px;
 }
 
 .uppercase {
@@ -34,54 +38,34 @@
     text-transform: capitalize!important;
 }
 
+.no-padding {
+    padding: 0!important;
+}
+
 .padding {
     padding: 8px 16px!important
 }
 
+.no-margin {
+    margin: 0!important;
+}
+
 .margin {
-    margin: 16px!important
+    margin: 16px;
 }
 
 .margin-top {
-    margin-top: 16px!important
+    margin-top: 16px;
 }
 
 .margin-bottom {
-    margin-bottom: 16px!important
+    margin-bottom: 16px;
 }
 
 .margin-left {
-    margin-left: 16px!important
+    margin-left: 16px;
 }
 
 .margin-right {
-    margin-right: 16px!important
-}
-
-.round {
-    border-radius: 2px;
-}
-
-.border-0 {
-    border: 0!important
-}
-
-.border {
-    border: 1px solid #ccc!important
-}
-
-.border-top {
-    border-top: 1px solid #ccc!important
-}
-
-.border-bottom {
-    border-bottom: 1px solid #ccc!important
-}
-
-.border-left {
-    border-left: 1px solid #ccc!important
-}
-
-.border-right {
-    border-right: 1px solid #ccc!important
+    margin-right: 16px;
 }
