added the option to place the sidenav either on the left(default) or the right

--- a/css/nav-and-dropdowns.css
+++ b/css/nav-and-dropdowns.css
@@ -183,8 +183,15 @@
     position: fixed!important;
     z-index: 1001;
     overflow: auto;
-    right: 0;
     top: 0;
+}
+
+.sidenav.left {
+    left: 0;
+}
+
+.sidenav.right {
+    right: 0;
 }
 
 .dropdown,
